Incluindo os jar's do jstl no projeto e adicionando a mensagem de sucesso quando o usuario fizer post dos dados

--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,12 @@
 			<artifactId>jstl</artifactId>
 			<version>1.2</version>
 		</dependency>
-
+		<dependency>
+		    <groupId>taglibs</groupId>
+		    <artifactId>standard</artifactId>
+		    <version>1.1.2</version>
+		</dependency>
+	
 		<!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
 		<dependency>
 			<groupId>org.postgresql</groupId>
