--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -12,6 +12,11 @@
 		<res-auth>Container</res-auth>
  </resource-ref>
   
+<!-- Apontando para os arquivos de tradução message que estão localizados em src/main/resources/resources-->
+<context-param>
+		<param-name>javax.servlet.jsp.jstl.fmt.localizationContext</param-name>
+		<param-value>resources.message</param-value>
+</context-param>
   
   
 </web-app>
